kardex-valorizado/error_traceback_3.txt
Traceback (most recent call last):
  File "C:\Users\USER\Github\kardex\kardex-valorizado\main.py", line 25, in <module>
    from views.ventas_window import VentasWindow
  File "C:\Users\USER\Github\kardex\kardex-valorizado\src\views\ventas_window.py", line 35
    from models.database_model import (obtener_session, Venta, VentaDetalle,
                                      ^
SyntaxError: '(' was never closed
